# vector-quantization-cpp

./: CMakeLists.txt  VectorQuantizer.cpp  VectorQuantizer.h  lena_gray.tif  main.cpp  main.h
